# FPGALearning

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  Dockerfile  README.md
cl/: CMakeLists.txt
cl/include/: CLArray.h
device/: CMakeLists.txt  opencl.cpp
device/cmake/: .FindAOCL.cmake.swp  FindAOCL.cmake  FindOpenCL.cmake
device/include/: EasyCL_export.h  aocl_utils.h  opencl.h
test/: CMakeLists.txt  Makefile  tests.cpp
